--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Poppins';
+    background-color: #171a1f;
+    color: #e2e2e2;
+    overflow-x: hidden;
+    position: absolute;
+    z-index: -4;
+}
