--- a/src/app/pages/tv/tv.component.html
+++ b/src/app/pages/tv/tv.component.html
@@ -1,47 +1,5 @@
-<app-header></app-header>
-<div class="tvContainer">
-  <div class="tvHeader">
-    <span>Series</span>
-    <input
-    [(ngModel)]="searchMovie"
-    type="text"
-    placeholder="Buscar serie"
-    (keyup)="searchMovies()"
-    />
-  </div>
-  <div class="tvContent">
-    <div
-      class="card"
-      *ngFor="let items of tvContent"
-      (click)="getTvDetail(items.id)"
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModal"
-      >
-      <img *ngIf="!items.poster_path"  class="no_picture" src="../../../assets/no-image.png"/>
-      <img *ngIf="items.poster_path" src="{{img_url + items.poster_path}}"/>
-    </div>
-
-    <div class="pagination" #paginagtion *ngIf="searchMovie === ''">
-      <button (click)="previousPages()">página anterior</button>
-      <span *ngIf="prevPage > 0 && currentPage > 1">{{prevPage}}</span>
-      <span>{{currentPage}}</span>
-      <span *ngIf="nextPage != 0">{{nextPage}}</span>
-      <button (click)="nextPages()">próxima pagina</button>
-    </div>
-  </div>
-</div>
-
-<app-modal
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-      [image]="modalData.image"
-      [description]="modalData.description"
-      [title]="modalData.title"
-      [rate]="modalData.rate"
-      [genres]="modalData.genres"
-      [id]="modalData.id"
-      [release_date]="modalData.release_date"
-></app-modal>
+<app-movies-series
+  [title]="'Series'"
+  [placeholder]="'Buscar serie'"
+  [type]="'tv'"
+></app-movies-series>
