--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -1,3 +1,4 @@
+<!-- PAGINAÇÃO DA LISTA DE FILMES/SERIES -->
 <div class="pagination">
   <button (click)="previousPages()">página anterior</button>
   <span>{{currentPage}}</span>
