--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,3 +1,4 @@
+<!-- MODAL QUE EXIBE DADOS DE UM(A) UNICO(A) FILME/SERIE -->
 <div class="modal-dialog modal-dialog-centered">
     <div class="modal-body">
       <div class="modal" *ngIf="id">
